使用 Colaboratory 创建

--- a/P2_summarization(seq2seq,T5).ipynb
+++ b/P2_summarization(seq2seq,T5).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNuNfZGEWs1yOfQ//vfez7F",
+      "authorship_tag": "ABX9TyPVspwRqhzdFKcW230dbzT2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2783,7 +2783,7 @@
         "os.chdir(\"/content/drive/MyDrive/nlp\")\n",
         "!pip install datasets\n",
         "!pip install -U transformers\n",
-        "!pip install -U accelerate #Trainer用\n",
+        "!pip install -U accelerate\n",
         "!pip install rouge-chinese  #评估用\n",
         "!pip install sentencepiece #T5模型需要\n",
         "from datasets import load_dataset\n",
